fixed some issues with the colors and the spacing

--- a/styles.css
+++ b/styles.css
@@ -366,7 +366,7 @@ body.galleryBody {
 .description {
     text-align: center;
     padding: 10px;
-    background: #fff;
+    background: transparent;
     font-size: 16px;
     font-weight: bold;
 }
